--- a/index.html
+++ b/index.html
@@ -1,69 +1,71 @@
-<div id="investment-calculator">
+<div id="investment-calculator" style="max-width:600px; font-family: Arial, sans-serif;">
   <h3>Investment Earnings Calculator</h3>
-  
-  <form id="investmentForm">
-    <label for="investmentAmount">Initial Investment Amount ($):</label>
-    <input type="number" id="investmentAmount" name="investmentAmount" min="30000" required>
-    <br/>
-    <label>Annual Return Rate (%):</label> 12% (fixed)
-    <br/>
-    <button type="submit">Calculate</button>
+
+  <form id="investmentForm" style="margin-bottom:1rem;">
+    <label for="investmentAmount">Initial Investment Amount ($):</label><br/>
+    <input type="number" id="investmentAmount" name="investmentAmount" min="30000" required
+      style="width:100%; padding:0.4rem; font-size:1rem; margin-top:0.25rem;"/>
+    <small>Minimum investment is $30,000</small><br/><br/>
+
+    <label>Annual Return Rate (%):</label><br/>
+    <strong>12% (fixed)</strong><br/><br/>
+
+    <button type="submit" 
+      style="background:#1a73e8;color:#fff;padding:0.5rem 1rem;border:none;border-radius:3px;cursor:pointer;">Calculate</button>
   </form>
-  
-  <div id="results" style="margin-top:20px;">
-    <h4>Results:</h4>
+
+  <div id="results" style="display:none; padding:1rem; border:1px solid #ddd; border-radius:5px; background:#fafafa;">
     <p><strong>Monthly Payment Received:</strong> $<span id="monthlyPayment">0.00</span></p>
-    <h5>Year 1 Earnings Breakdown</h5>
-    <ul>
+
+    <h4>Year 1 Earnings Breakdown</h4>
+    <ul style="list-style:none; padding-left:0;">
       <li>Total Year 1 Earnings (Principal Return + Profit): $<span id="year1TotalEarnings">0.00</span></li>
       <li>Principal Returned: $<span id="year1PrincipalReturned">0.00</span></li>
       <li>Profit Earned: $<span id="year1Profit">0.00</span></li>
     </ul>
 
-    <h5>5-Year Earnings Breakdown</h5>
-    <table border="1" cellpadding="5" cellspacing="0" id="yearlyBreakdown" style="border-collapse: collapse; width: 100%;">
+    <h4>5-Year Earnings Breakdown</h4> 
+    <table border="1" cellpadding="5" cellspacing="0" style="border-collapse:collapse; width:100%; text-align:right;">
       <thead>
-        <tr>
-          <th>Year</th>
+        <tr style="background:#1a73e8; color:#fff;">
+          <th style="text-align:center;">Year</th>
           <th>Principal Returned ($)</th>
           <th>Profit Earned ($)</th>
           <th>Total Earnings ($)</th>
         </tr>
       </thead>
-      <tbody></tbody>
+      <tbody id="yearlyBreakdown"></tbody>
     </table>
 
-    <p><strong>Months Until You Can Roll Into New Investment: </strong><span id="rollMonths">0</span></p>
+    <p><strong>Months Until You Can Roll Into New Investment:</strong> <span id="rollMonths">0</span></p>
+
+    <canvas id="earningsChart" width="600" height="300" 
+      style="margin-top:1rem; background:#fff; border:1px solid #ddd; border-radius:5px;"></canvas>
   </div>
-  
-  <canvas id="earningsChart" width="600" height="300" style="margin-top: 20px;"></canvas>
-</div>
 
-<!-- Chart.js CDN -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- Chart.js CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-<script>
+  <script>
   (function(){
     const form = document.getElementById('investmentForm');
+    const resultsDiv = document.getElementById('results');
     const monthlyPaymentEl = document.getElementById('monthlyPayment');
     const y1TotalEarningsEl = document.getElementById('year1TotalEarnings');
     const y1PrincipalReturnedEl = document.getElementById('year1PrincipalReturned');
     const y1ProfitEl = document.getElementById('year1Profit');
     const rollMonthsEl = document.getElementById('rollMonths');
-    const yearlyBreakdownBody = document.querySelector('#yearlyBreakdown tbody');
+    const yearlyBreakdownBody = document.getElementById('yearlyBreakdown');
     const ctx = document.getElementById('earningsChart').getContext('2d');
 
     let chart;
 
-    // Format numbers to USD with 2 decimals
+    // Format number as USD currency string
     function formatUSD(num) {
-      return num.toLocaleString('en-US', {minimumFractionDigits:2, maximumFractionDigits:2});
+      return num.toLocaleString('en-US', {minimumFractionDigits: 2, maximumFractionDigits: 2});
     }
 
-    // Calculate fixed monthly payment amount using amortization-style formula
-    // rate = monthly return rate (decimal)
-    // nper = total number payments
-    // pv = initial investment amount
+    // PMT-like formula for fixed monthly payment
     function calculateMonthlyPayment(rate, nper, pv) {
       if(rate === 0) return pv / nper;
       return (rate * pv) / (1 - Math.pow(1 + rate, -nper));
@@ -72,144 +74,157 @@
     form.addEventListener('submit', function(e){
       e.preventDefault();
 
-      const initialInvestment = parseFloat(form.investmentAmount.value);
-      const annualReturnRate = 0.12;  // fixed 12%
+      const principal = parseFloat(form.investmentAmount.value);
+      const annualRate = 0.12;
       const totalMonths = 60;
-      const monthlyRate = annualReturnRate / 12;
+      const monthlyRate = annualRate / 12;
 
-      if(initialInvestment < 30000) {
+      if(isNaN(principal) || principal < 30000){
         alert('Initial investment must be at least $30,000.');
+        resultsDiv.style.display = 'none';
         return;
       }
 
-      // Calculate the fixed monthly payment (your monthly earnings)
-      const monthlyPayment = calculateMonthlyPayment(monthlyRate, totalMonths, initialInvestment);
+      const monthlyPayment = calculateMonthlyPayment(monthlyRate, totalMonths, principal);
 
-      let remainingPrincipal = initialInvestment;
-      let monthlyPrincipalReturns = [];
-      let monthlyProfits = [];
+      let remainingPrincipal = principal;
+      const monthlyPrincipalReturned = [];
+      const monthlyProfit = [];
 
-      for(let month=1; month <= totalMonths; month++) {
-        // Profit earned is interest portion on remaining principal
-        const profitForMonth = remainingPrincipal * monthlyRate;
-        // Principal returned portion is monthly payment minus profit
-        let principalReturned = monthlyPayment - profitForMonth;
+      for(let month=1; month <= totalMonths; month++){
+        const profitThisMonth = remainingPrincipal * monthlyRate;
+        let principalReturn = monthlyPayment - profitThisMonth;
+        if(principalReturn > remainingPrincipal) principalReturn = remainingPrincipal;
 
-        // Prevent negative principal in last month(s)
-        if(principalReturned > remainingPrincipal) principalReturned = remainingPrincipal;
+        monthlyProfit.push(profitThisMonth);
+        monthlyPrincipalReturned.push(principalReturn);
 
-        monthlyProfits.push(profitForMonth);
-        monthlyPrincipalReturns.push(principalReturned);
-
-        remainingPrincipal -= principalReturned;
+        remainingPrincipal -= principalReturn;
         if(remainingPrincipal < 0) remainingPrincipal = 0;
       }
 
-      // Show monthly payment received (the monthly earnings)
       monthlyPaymentEl.textContent = formatUSD(monthlyPayment);
 
-      // Calculate yearly breakdown - sums of 12 months each year
-      const yearlyPrincipalReturned = [];
+      // Yearly aggregates
+      const yearlyPrincipal = [];
       const yearlyProfit = [];
-      const yearlyTotalEarnings = [];
+      const yearlyTotal = [];
 
       for(let year=0; year < 5; year++){
         let sumPrincipal = 0;
         let sumProfit = 0;
         for(let m=0; m<12; m++){
-          sumPrincipal += monthlyPrincipalReturns[year*12 + m];
-          sumProfit += monthlyProfits[year*12 + m];
+          sumPrincipal += monthlyPrincipalReturned[year*12 + m];
+          sumProfit += monthlyProfit[year*12 + m];
         }
-        yearlyPrincipalReturned.push(sumPrincipal);
+        yearlyPrincipal.push(sumPrincipal);
         yearlyProfit.push(sumProfit);
-        yearlyTotalEarnings.push(sumPrincipal + sumProfit);
+        yearlyTotal.push(sumPrincipal + sumProfit);
       }
 
-      // Display year 1 breakdown
-      y1PrincipalReturnedEl.textContent = formatUSD(yearlyPrincipalReturned[0]);
+      y1PrincipalReturnedEl.textContent = formatUSD(yearlyPrincipal[0]);
       y1ProfitEl.textContent = formatUSD(yearlyProfit[0]);
-      y1TotalEarningsEl.textContent = formatUSD(yearlyTotalEarnings[0]);
+      y1TotalEarningsEl.textContent = formatUSD(yearlyTotal[0]);
 
-      // Fill the 5-year table rows
+      // Display yearly breakdown table
       yearlyBreakdownBody.innerHTML = '';
-      for(let y=0; y<5; y++) {
+      for(let y=0; y<5; y++){
         const row = document.createElement('tr');
         row.innerHTML = `
-          <td>${y + 1}</td>
-          <td>${formatUSD(yearlyPrincipalReturned[y])}</td>
+          <td style="text-align:center;">${y+1}</td>
+          <td>${formatUSD(yearlyPrincipal[y])}</td>
           <td>${formatUSD(yearlyProfit[y])}</td>
-          <td>${formatUSD(yearlyTotalEarnings[y])}</td>
+          <td>${formatUSD(yearlyTotal[y])}</td>
         `;
         yearlyBreakdownBody.appendChild(row);
       }
-      
-      // Add totals row
-      const totalPrincipalReturned = yearlyPrincipalReturned.reduce((acc, val) => acc + val, 0);
-      const totalProfit = yearlyProfit.reduce((acc, val) => acc + val, 0);
-      const totalEarnings = yearlyTotalEarnings.reduce((acc, val) => acc + val, 0);
+
+      // Add total row
+      const totalPrincipal = yearlyPrincipal.reduce((a,b) => a+b, 0);
+      const totalProfit = yearlyProfit.reduce((a,b) => a+b, 0);
+      const totalEarnings = yearlyTotal.reduce((a,b) => a+b, 0);
 
       const totalRow = document.createElement('tr');
       totalRow.style.fontWeight = 'bold';
+      totalRow.style.backgroundColor = '#f1f1f1';
       totalRow.innerHTML = `
-        <td>Total</td>
-        <td>${formatUSD(totalPrincipalReturned)}</td>
+        <td style="text-align:center;">Total</td>
+        <td>${formatUSD(totalPrincipal)}</td>
         <td>${formatUSD(totalProfit)}</td>
         <td>${formatUSD(totalEarnings)}</td>
       `;
       yearlyBreakdownBody.appendChild(totalRow);
 
-      // Months until you can roll into another investment
-      // Formula: ceil(30000 / monthlyPayment)
+      // Calculate months to roll into new investment
       const monthsToRoll = Math.ceil(30000 / monthlyPayment);
       rollMonthsEl.textContent = `Month ${monthsToRoll}`;
 
-      // Draw a chart showing yearly principal returned and profit earned
-      const labels = ['Year 1', 'Year 2', 'Year 3', 'Year 4', 'Year 5'];
+      resultsDiv.style.display = 'block';
+
+      // Calculate cumulative total earnings array
+      const cumulativeTotalEarnings = [];
+      let runningTotal = 0;
+      for(let i=0; i < totalMonths; i++){
+        runningTotal += monthlyPrincipalReturned[i] + monthlyProfit[i];
+        cumulativeTotalEarnings.push(runningTotal);
+      }
+
+      const labels = Array.from({length: totalMonths}, (_,i) => i+1);
 
       if(chart) chart.destroy();
 
       chart = new Chart(ctx, {
-        type: 'bar',
+        type: 'line',
         data: {
           labels: labels,
-          datasets: [
-            {
-              label: 'Principal Returned ($)',
-              data: yearlyPrincipalReturned,
-              backgroundColor: 'rgba(54, 162, 235, 0.7)'
-            },
-            {
-              label: 'Profit Earned ($)',
-              data: yearlyProfit,
-              backgroundColor: 'rgba(255, 99, 132, 0.7)'
-            }
-          ]
+          datasets: [{
+            label: 'Cumulative Total Earnings ($)',
+            data: cumulativeTotalEarnings,
+            borderColor: 'rgba(75, 192, 192, 0.9)',
+            backgroundColor: 'rgba(75, 192, 192, 0.4)',
+            fill: true,
+            tension: 0.3,
+            pointRadius: 2,
+          }]
         },
         options: {
           responsive: true,
+          interaction: {
+            mode: 'nearest',
+            intersect: false
+          },
           scales: {
+            x: {
+              title: {
+                display: true,
+                text: 'Month'
+              }
+            },
             y: {
               beginAtZero: true,
               title: {
                 display: true,
-                text: 'Amount ($)'
+                text: 'Total Earnings ($)'
               }
             }
           },
           plugins: {
+            title: {
+              display: true,
+              text: 'Cumulative Total Earnings Over 5 Years'
+            },
             tooltip: {
               mode: 'index',
               intersect: false
             },
-            title: {
-              display: true,
-              text: 'Investment Earnings Breakdown Over 5 Years'
+            legend: {
+              position: 'top'
             }
           }
         }
       });
 
     });
-
   })();
-</script>
+  </script>
+</div>
