--- a/index.html
+++ b/index.html
@@ -1,43 +1,36 @@
 <div id="investment-calculator" style="max-width:600px; font-family: Arial, sans-serif;">
-  <h3>Investment Earnings Calculator</h3>
+  <h3>Lending Model Calculator</h3>
 
   <form id="investmentForm" style="margin-bottom:1rem;">
-    <label for="investmentAmount">Initial Investment Amount ($):</label><br/>
+    <label for="investmentAmount">Initial Loan Amount ($):</label><br/>
     <input type="number" id="investmentAmount" name="investmentAmount" min="30000" required
-      style="width:100%; padding:0.4rem; font-size:1rem; margin-top:0.25rem;"/>
-    <small>Minimum investment is $30,000</small><br/><br/>
+      style="width:30%; padding:0.4rem; font-size:1rem; margin-top:0.25rem;"/><br/>
+    <small>Minimum loan: $30,000</small><br/><br/>
 
-    <label>Annual Return Rate (%):</label><br/>
-    <strong>12% (fixed)</strong><br/><br/>
+    <label>Annual Rate of Return (%): </label><strong>12% fixed</strong><br/><br/>
 
     <button type="submit" 
       style="background:#1a73e8;color:#fff;padding:0.5rem 1rem;border:none;border-radius:3px;cursor:pointer;">Calculate</button>
   </form>
 
   <div id="results" style="display:none; padding:1rem; border:1px solid #ddd; border-radius:5px; background:#fafafa;">
-    <p><strong>Monthly Payment Received:</strong> $<span id="monthlyPayment">0.00</span></p>
+    <p><strong>Monthly Earnings:</strong> $<span id="monthlyPayment">0.00</span></p>
 
-    <h4>Year 1 Earnings Breakdown</h4>
-    <ul style="list-style:none; padding-left:0;">
-      <li>Total Year 1 Earnings (Principal Return + Profit): $<span id="year1TotalEarnings">0.00</span></li>
-      <li>Principal Returned: $<span id="year1PrincipalReturned">0.00</span></li>
-      <li>Profit Earned: $<span id="year1Profit">0.00</span></li>
-    </ul>
 
     <h4>5-Year Earnings Breakdown</h4> 
     <table border="1" cellpadding="5" cellspacing="0" style="border-collapse:collapse; width:100%; text-align:right;">
       <thead>
         <tr style="background:#1a73e8; color:#fff;">
           <th style="text-align:center;">Year</th>
-          <th>Principal Returned ($)</th>
-          <th>Profit Earned ($)</th>
+          <th>Principal ($)</th>
+          <th>Interest ($)</th>
           <th>Total Earnings ($)</th>
         </tr>
       </thead>
       <tbody id="yearlyBreakdown"></tbody>
     </table>
 
-    <p><strong>Months Until You Can Roll Into New Investment:</strong> <span id="rollMonths">0</span></p>
+    <p><strong>When Can I Roll Earnings Into A New $30,000 Loan:</strong> <span id="rollMonths">0</span></p>
 
     <canvas id="earningsChart" width="600" height="300" 
       style="margin-top:1rem; background:#fff; border:1px solid #ddd; border-radius:5px;"></canvas>
@@ -51,9 +44,6 @@
     const form = document.getElementById('investmentForm');
     const resultsDiv = document.getElementById('results');
     const monthlyPaymentEl = document.getElementById('monthlyPayment');
-    const y1TotalEarningsEl = document.getElementById('year1TotalEarnings');
-    const y1PrincipalReturnedEl = document.getElementById('year1PrincipalReturned');
-    const y1ProfitEl = document.getElementById('year1Profit');
     const rollMonthsEl = document.getElementById('rollMonths');
     const yearlyBreakdownBody = document.getElementById('yearlyBreakdown');
     const ctx = document.getElementById('earningsChart').getContext('2d');
@@ -121,10 +111,6 @@
         yearlyProfit.push(sumProfit);
         yearlyTotal.push(sumPrincipal + sumProfit);
       }
-
-      y1PrincipalReturnedEl.textContent = formatUSD(yearlyPrincipal[0]);
-      y1ProfitEl.textContent = formatUSD(yearlyProfit[0]);
-      y1TotalEarningsEl.textContent = formatUSD(yearlyTotal[0]);
 
       // Display yearly breakdown table
       yearlyBreakdownBody.innerHTML = '';
